@@ -41,10 +41,16 @@ class EncryptionUtility {
 	 */
 	public static function encrypt($string) {
 		if (in_array('mcrypt', get_loaded_extensions())) {
-			$key = md5($GLOBALS['TYPO3_CONF_VARS']['SYS']['encryptionKey']);
-			$iv = mcrypt_create_iv(mcrypt_get_iv_size(MCRYPT_BLOWFISH, MCRYPT_MODE_CBC), MCRYPT_RAND);
-			$string = mcrypt_encrypt(MCRYPT_BLOWFISH, $key, $string, MCRYPT_MODE_CBC, $iv);
-			$cypher = array(base64_encode($string), base64_encode($iv));
+			$module = mcrypt_module_open($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['sr_freecap']['encryptionAlgorithm'], '', MCRYPT_MODE_CBC, '');
+			if ($module !== FALSE) {
+				$key = md5($GLOBALS['TYPO3_CONF_VARS']['SYS']['encryptionKey']);
+				$iv = mcrypt_create_iv(mcrypt_enc_get_iv_size($module), MCRYPT_RAND);
+				$string = mcrypt_encrypt($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['sr_freecap']['encryptionAlgorithm'], $key, $string, MCRYPT_MODE_CBC, $iv);
+				$cypher = array(base64_encode($string), base64_encode($iv));
+				mcrypt_module_close($module);
+			} else {
+				$cypher = array(base64_encode($string));
+			}
 		} else {
 			$cypher = array(base64_encode($string));			
 		}
@@ -61,7 +67,7 @@ class EncryptionUtility {
 	public static function decrypt ($cypher){
 		if (in_array('mcrypt', get_loaded_extensions())) {
 			$key = md5($GLOBALS['TYPO3_CONF_VARS']['SYS']['encryptionKey']);
-			$string = trim(mcrypt_decrypt(MCRYPT_BLOWFISH, $key, base64_decode($cypher[0]), MCRYPT_MODE_CBC, base64_decode($cypher[1])));
+			$string = trim(mcrypt_decrypt($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['sr_freecap']['encryptionAlgorithm'], $key, base64_decode($cypher[0]), MCRYPT_MODE_CBC, base64_decode($cypher[1])));
 		} else {
 			$string = base64_decode($cypher[0]);
 		}
